RESOLVED FIXED50760
[Qt] It's possible to send data before the response when we handle ignored errors.
https://bugs.webkit.org/show_bug.cgi?id=50760
Summary [Qt] It's possible to send data before the response when we handle ignored er...
Jocelyn Turcotte
Reported 2010-12-09 07:16:34 PST
I saw times where sendResponseIfNeeded called by forwardData woudln't send the response even if data was available since m_responseDataSent woudln't be set yet.
Attachments
Patch (3.72 KB, patch)
2010-12-09 07:23 PST, Jocelyn Turcotte
no flags
Patch v2 (fixes compile error) (3.73 KB, patch)
2010-12-09 08:07 PST, Jocelyn Turcotte
kenneth: review+
commit-queue: commit-queue-
Jocelyn Turcotte
Comment 1 2010-12-09 07:23:25 PST
Early Warning System Bot
Comment 2 2010-12-09 07:35:49 PST
Jocelyn Turcotte
Comment 3 2010-12-09 08:07:13 PST
Created attachment 76066 [details] Patch v2 (fixes compile error)
WebKit Commit Bot
Comment 4 2010-12-09 22:24:12 PST
Comment on attachment 76066 [details] Patch v2 (fixes compile error) Rejecting patch 76066 from commit-queue. Failed to run "['./WebKitTools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=eseidel-cq-sl', 'build', '--no-clean', '--no-update', '--build-style=both']" exit_code: 1 ERROR: Working directory has local commits, pass --force-clean to continue. Full output: http://queues.webkit.org/results/6924028
WebKit Commit Bot
Comment 5 2010-12-09 22:24:24 PST
The commit-queue encountered the following flaky tests while processing attachment 76066 [details]: fast/images/load-img-with-empty-src.html fast/preloader/script.html Please file bugs against the tests. These tests were authored by abarth@webkit.org and mitz@webkit.org. The commit-queue is continuing to process your patch.
Jocelyn Turcotte
Comment 6 2010-12-10 02:44:13 PST
WebKit Review Bot
Comment 7 2010-12-10 11:46:03 PST
http://trac.webkit.org/changeset/73707 might have broken GTK Linux 32-bit Debug
Note You need to log in before you can comment on or make changes to this bug.