[Qt] Make sure we send the response before any data. https://bugs.webkit.org/show_bug.cgi?id=50760

Reviewed by Kenneth Rohde Christiansen.

This patch make sure the data available flag is set before
we call sendResponseIfNeeded.

* platform/network/qt/QNetworkReplyHandler.cpp:
(WebCore::QNetworkReplyHandler::QNetworkReplyHandler):
(WebCore::QNetworkReplyHandler::finish):
(WebCore::QNetworkReplyHandler::sendResponseIfNeeded):
(WebCore::QNetworkReplyHandler::forwardData):
(WebCore::QNetworkReplyHandler::resetState):
* platform/network/qt/QNetworkReplyHandler.h:

Canonical link: https://commits.webkit.org/64114@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73707 268f45cc-cd09-0410-ab3c-d52691b4dbfc